# sphinx-superdoc

./: .coveragerc  .gitignore  LICENSE  README.md  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: basic.yml
sphinx_superdoc/: __init__.py  main.py
tests/: test_main.py
