[bumpversion]
current_version = 0.1.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>\w+)\.(?P<build>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}.{build}
	{major}.{minor}.{patch}
commit = True
tag = True

[metadata]
description = Sphinx multiversion extension with html select version template
long_description_content_type = 'text/markdown'
long_description = file: README.md

[bumpversion:file:sphinx_superdoc/__init__.py]

[bumpversion:file:setup.py]

[bumpversion:file:VERSION]

[flake8]
exclude = build, .git, .venv, conftest.py, docs/conf.py
max-line-length = 79
application_import_names = sphinx_superdoc
rst-roles =
	class,
	attr,
	meth,
	func,
extend-ignore =
	RST201,RST203,RST301,RST210,RST213,
	D412, D202,
	ANN101, ANN102,
per-file-ignores =
	tests/test_amulets/test_easy_dict*: AAA01, AAA02, AAA03, AAA04, AAA05,
	AAA06, AAA99, D100, D101, D104, N801, ANN001, ANN002, ANN003,
	ANN201, ANN202, ANN203, ANN204, ANN205, ANN206, ANN301
	tests/test_amulets/test_tree_view*: AAA01, AAA02, AAA03, AAA04, AAA05,
	AAA06, AAA99, D100, D101, D104, N801, ANN001, ANN002, ANN003,
	ANN201, ANN202, ANN203, ANN204, ANN205, ANN206, ANN301
	tests/test_workers/test_scribe*: AAA01, AAA02, AAA03, AAA04, AAA05,
	AAA06, AAA99, D100, D101, D104, N801, ANN001, ANN002, ANN003,
	ANN201, ANN202, ANN203, ANN204, ANN205, ANN206, ANN301
	tests/*:
	D100, D101, D104, N801, ECE001,
	ANN001, ANN002, ANN003, ANN201, ANN202, ANN203, ANN204, ANN205, ANN206,
	ANN301
suppress-none-returning = True

[darglint]
docstring_style = google
